sort of filth as much as possible whilst not inconveniencing 'normal' users.
4. Add expunge feature to kill. Deleting messages now marks a msg for 
deletion two days hence. To have the old behaviour, do a 'kill exp' or use
the standard alias "expunge". This will cause the message to be deleted at
the next queue message cycle.
04Oct01=======================================================================
1. allow a residence time of (default) 2 days before actually deleting a msg.
2. reduce the number R: lines on a bull from a bbs to 2 (the origin and the
last port of call).
3. ignore deleted messages for queuing purposes
4. store deleted status across restarts!
5. make callsign checking more rigorous
6. dup check PC49 (kill full)
7. improved the regex matching of badwords (more efficient, better coverage)
8. added default badword and badw_regex tables (as .issue files) which will
activate unless there is one there already. It will NOT overwrite an existing
file - so if you change it your changes will remain intact.
03Oct01=======================================================================
1. don't allow @WWW to become a 'TO' field...
2. handle @gb7tlh.#35.eu type addresses as well
02Oct01=======================================================================
1. fixed the 'ever lengthening msg' syndrome and probably made the whole
thing more reliable at the same time.
2. do some restructuring of the msg system and upissue the version no.
3. fix @xxxx syntax for bbs input
01Oct01=======================================================================
1. made login info not the default
2. change the looping protoection for PC16/17/19/21 and also be more rigorous
in who we accept which PC16/17/21's from.
3. fix MAJOR disconnect bug introduced accidentally in the NP work.
4. Try each badword with an S on the end as well and also check for 'f.u   c'
type things as well (this only works for a few wellknown english ones).